--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body {
   align-items: center;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='46' height='46' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(22)'%3E%3Crect width='100%25' height='100%25' fill='rgba(244, 241, 222,1)'/%3E%3Ccircle cx='20' cy='20' r='1' fill='%231a202c'/%3E%3Ccircle cx='20' cy='20' r='1' fill='rgba(61, 64, 91,1)'/%3E%3Ccircle cx='-20' cy='20' r='1' fill='rgba(61, 64, 91,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 h1 {
   font-family: "Bebas Neue", cursive;
