--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,12 @@ nav a {
   transition: all 0.5s ease;
   display: none;
 }
+.banner .moving-area {
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  background-color: red;
+}
 .circle-1 {
   z-index: 0;
   position: absolute;
