--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ nav a {
 /* Banner */
 .banner {
   width: 100%;
-  height: 500px;
+  height: 1000px;
   background-color: #f2cc8f;
   display: flex;
   justify-content: center;
@@ -109,37 +109,6 @@ nav a {
   clip-path: circle(40% at 50% 50%);
   transition: all 0.5s ease;
 }
-/* .banner .moving-area {
-  width: 20rem;
-  height: 20rem;
-  border-radius: 50%;
-  background-color: red;
-}
-.banner .circle-test {
-  clip: 10px, 100px, 75px, 5px;
-}
-.circle-1 {
-  z-index: 0;
-  position: absolute;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  margin: 2rem 0rem 2rem 0rem;
-  background-color: #3d405b;
-}
-.circle-2 {
-  z-index: 0;
-  position: absolute;
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  margin: 2rem 0rem 2rem 0rem;
-  background-color: #3d405b;
-} */
-/* .img-avatar-toggle {
-  clip-path: circle(40% at 50% 50%);
-  transition: all 1s ease;
-} */
 
 /* PROJECTS */
 .projects {
@@ -152,7 +121,9 @@ nav a {
   height: auto;
   text-align: center;
 }
-
+.projects .row {
+  transition: all 1s ease;
+}
 .projects ul {
   display: flex;
   align-items: center;
@@ -160,11 +131,35 @@ nav a {
   width: 1200px;
   height: auto;
 }
-.projects li img {
+
+.projects-ul-hidden {
+  opacity: 0;
+  transition: all 10s ease-in;
+}
+.projects ul li {
+  width: 17rem;
+  height: 17rem;
+  margin: 50px;
+}
+.projects .project-img {
   width: 15rem;
   height: 15rem;
-  margin: 2rem;
   border-radius: 1rem;
+  cursor: pointer;
+}
+.projects .project-img-out-sh {
+  box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.75);
+  transition: all 0.2s ease-out;
+}
+.projects .project-img-in-sh {
+  width: 16rem;
+  height: 16rem;
+  box-shadow: 0px 0px 26px -10px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 26px -10px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 26px -10px rgba(0, 0, 0, 0.75);
+  transition: all 0.2s ease-in;
 }
 
 /* WORK */
