--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,7 @@
 }
 body {
   font-family: "Abel", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='46' height='46' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(22)'%3E%3Crect width='100%25' height='100%25' fill='rgba(244, 241, 222,1)'/%3E%3Ccircle cx='20' cy='20' r='1' fill='%231a202c'/%3E%3Ccircle cx='20' cy='20' r='1' fill='rgba(61, 64, 91,1)'/%3E%3Ccircle cx='-20' cy='20' r='1' fill='rgba(61, 64, 91,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   background-attachment: fixed;
   margin: 0;
@@ -22,6 +20,13 @@ h1 {
   font-family: "Bebas Neue", cursive;
   padding: 5rem 0rem 1rem 0rem;
   letter-spacing: 1rem;
+}
+.page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container {
   width: 1200px;
@@ -169,32 +174,79 @@ nav a {
   align-items: center;
   width: 100%;
   background-color: #f2cc8f;
-  color: #3d405b;
   flex-direction: column;
 }
 .work h1 {
   font-family: "Bebas Neue", cursive;
 }
-.work ul {
-  width: 40rem;
+.work .work-list {
   margin: 3rem 0rem 5rem 0rem;
 }
-.work ul li {
-  width: 40rem;
+.work .work-list .work-info {
+  cursor: pointer;
+  width: 640px;
+  height: 96px;
 }
-.work ul li p {
+.work .work-list .work-info .work-info-text {
   width: 40rem;
   padding: 1rem;
   font-style: italic;
+  color: #3d405b;
+  transition: all 1s ease;
+  text-align: justify;
 }
-.work ul li p span {
+.work .work-list .work-info .work-info-text .work-year {
   font-weight: bold;
   font-family: "Bebas Neue", cursive;
   letter-spacing: 1rem;
 }
 
-/* FOOTER */
+.work-out {
+  filter: blur(4px);
+}
+.work-in {
+  filter: none;
+  transform: scale(1.1);
+}
+/* Work box */
+.work-box-modal-body {
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  overflow: auto;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.work-box {
+  width: 500px;
+  height: auto;
+  background-color: white;
+  border-radius: 25px;
+  padding: 5rem;
+  box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 0px 26px -5px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: all 1s ease;
+}
 
+.work-box-close::after {
+  float: right;
+  cursor: pointer;
+  content: "\00d7";
+  font-size: 30pt;
+}
+/* .work-box-close button {
+  float: right;
+  display: inline-block;
+  cursor: pointer;
+  content: "\00d7";
+} */
+/* FOOTER */
 footer {
   background-color: #3d405b;
   margin-bottom: 5rem;
