--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,15 @@ nav {
   border-radius: 15px 15px 0px 0px;
   border: #f2cc8f 1px solid;
 }
+.nav-scroll {
+  width: 100%;
+  z-index: 3;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  border-radius: 0 !important;
+  border: 0 !important;
+}
 nav ul,
 li {
   list-style: none;
@@ -243,9 +252,14 @@ nav a {
 }
 .work-box-close button {
   float: right;
-  display: inline-block;
+  outline: none;
+  background: none;
+  border: none;
   cursor: pointer;
-  content: "\00d7";
+  padding: 0;
+  margin: 0;
+  width: 50px;
+  height: 50px;
 }
 
 /* FOOTER */
